# GildedRose-Refactoring-Kata

./: .gitignore  README
cpp/: CMakeLists.txt  README  cmake-and-run.sh
